Added full user info to login response
