# specifications/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 
 info:
     title: PassWordManagerAPI
-    version: 1.3.0
+    version: 1.3.1
     description: >-
         PassWordManager API used to manage users, personal credential databases and
         the services offered to the user
@@ -51,6 +51,11 @@ paths:
                                 properties:
                                     firstName:
                                         type: string
+                                    lastName:
+                                        type: string
+                                    email:
+                                        type: string
+                                        format: email
                                     PSK:
                                         type: string
                                         format: hex
